--- a/QuickAdmin/quick_admin.ui
+++ b/QuickAdmin/quick_admin.ui
@@ -130,7 +130,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>540</y>
+     <y>560</y>
      <width>211</width>
      <height>20</height>
     </rect>
@@ -140,7 +140,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>540</y>
+     <y>560</y>
      <width>101</width>
      <height>16</height>
     </rect>
@@ -170,6 +170,42 @@
      <width>211</width>
      <height>22</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>530</y>
+     <width>101</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Edition Notes:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txtAddNewLabel">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>530</y>
+     <width>211</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="cmdSaveLabel">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>530</y>
+     <width>101</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Save + Refresh</string>
    </property>
   </widget>
  </widget>
