--- a/TapeCalc/tapecalc.ui
+++ b/TapeCalc/tapecalc.ui
@@ -144,6 +144,20 @@
     <string>Extra</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="cmdComplete">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>70</y>
+     <width>71</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Recording
+Complete</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
